--- a/libdmg/CMakeLists.txt
+++ b/libdmg/CMakeLists.txt
@@ -1,6 +1,7 @@
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Wextra -Werror \
     -Wno-unused-result -Wno-unused-parameter -Wno-unused-function \
     -Wno-missing-field-initializers -Wno-missing-braces")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O3")
 set(CMAKE_C_STANDARD 11)
 
 set(HEADERS
@@ -20,5 +21,6 @@ set(SOURCES
 
 add_library(libdmg ${HEADERS} ${SOURCES})
 target_include_directories(libdmg PUBLIC include)
+target_include_directories(libdmg PRIVATE private)
 
 target_link_libraries(libdmg)
